# A.R.G.O.S

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  argos.yaml.example  conftest.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: main-protection.json
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
.well-known/: security.txt
apps/docs/: README.md
apps/docs/docs/methodology/: index.md
apps/landing/: README.md
benchmarks/: README.md
design-system/: DESIGN_SYSTEM.md  tokens.css  tokens.json  tokens.py  tokens.schema.json  tokens.ts
docs/: asi-taxonomy-crossref.md  empirical-evaluation.md
docs-internal/: ARCHITECTURE.md  PLAN.md  THREAT_MODEL.md
docs-internal/RFCs/: 0001-monorepo-layout.md  0002-compliance-data.md  template.md
examples/: README.md
scripts/: argos_self_audit.py  build_tokens.py  canonical_eval.py
tests/: test_audit_global.py  test_hardening_audit.py
